--- a/WebEscuela/WebEscuela/WebEscuela.csproj
+++ b/WebEscuela/WebEscuela/WebEscuela.csproj
@@ -67,7 +67,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
-    <Content Include="Site1.Master" />
+    <Content Include="Plantillas\plantillaPrincipal.Master" />
+    <Content Include="Plantillas\plantillaLogin.Master" />
+    <Content Include="Plantillas\plantillaPanel.Master" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -79,13 +81,31 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Plantillas\plantillaLogin.Master.cs">
+      <DependentUpon>plantillaLogin.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Plantillas\plantillaLogin.Master.designer.cs">
+      <DependentUpon>plantillaLogin.Master</DependentUpon>
+    </Compile>
+    <Compile Include="Plantillas\plantillaPanel.Master.cs">
+      <DependentUpon>plantillaPanel.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Plantillas\plantillaPanel.Master.designer.cs">
+      <DependentUpon>plantillaPanel.Master</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Site1.Master.cs">
-      <DependentUpon>Site1.Master</DependentUpon>
+    <Compile Include="Plantillas\plantillaPrincipal.Master.cs">
+      <DependentUpon>plantillaPrincipal.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Site1.Master.designer.cs">
-      <DependentUpon>Site1.Master</DependentUpon>
+    <Compile Include="Plantillas\plantillaPrincipal.Master.designer.cs">
+      <DependentUpon>plantillaPrincipal.Master</DependentUpon>
     </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="css\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
